# mybot

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
mybot/: __init__.py  __main__.py
mybot/agent/: loop.py  skill.py  subagent.py
mybot/bus/: message.py  queue.py
mybot/channels/: base.py  discord.py  discord_bot.py  manager.py  registry.py  websocket.py  weixin.py
mybot/cli/: commands.py
mybot/cli/bus/: message.py  queue.py
mybot/commands/: builtin.py  router.py
mybot/config/: loader.py  path.py  question.py  schema.py
mybot/context/: context.py  session.py
mybot/memory/: context.py  session.py
mybot/providers/: base.py  deepseek_provider.py  default_provider.py  local_provider.py  minimax_provider.py  moonshot_provider.py  registry.py
mybot/skills/: README.md
mybot/skills/skill-creator/: SKILL.md
mybot/tools/: __init__.py  base.py  fielstate.py  filesystem.py  math.py  mcp.py  message.py  registry.py  sandbox.py  shell.py  spawn.py  web.py
mybot/utils/: auth.py  document.py  helper.py  media_decode.py
test/agent/: test_skill_loader.py
tests/agent/: test_skill_loader.py
webui/: README.md  index.html  package-lock.json  package.json  tsconfig.build.json  vite.config.ts
webui/src/: App.tsx  globals.css
webui/src/components/: ChatList.tsx  ChatPane.tsx  EmptyState.tsx  LoginForm.tsx  MessageBubble.tsx  Sidebar.tsx
webui/src/hooks/: useMybotStream.ts  useTheme.ts
webui/src/i18n/: config.ts
webui/src/lib/: bootstrap.ts  mybot-client.ts  types.ts
webui/src/providers/: ClientProvider.tsx
webui/src/tests/: api.test.ts  app-layout.test.tsx  i18n.test.tsx  kxbot-client.test.ts  mybot-client.test.ts  setup.ts  thread-shell.test.tsx  useKxbotStream.test.tsx  useMybotStream.test.tsx  (+1 more)
(+16 files in other folders)
