[project]
name = "mybot"
version = "0.0.1"
description = "A lightweight personal AI assistant framework"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Jerry Zhou"}
]
keywords = ["ai", "agent", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.20.0,<1.0.0",
    "litellm>=1.81.5,<2.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "rich>=14.0.0,<15.0.0",
    "loguru>=0.7.3,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[project.optional-dependencies]
matrix = [
    "matrix-nio[e2e]>=0.25.2",
    "mistune>=3.0.0,<4.0.0",
    "nh3>=0.2.17,<1.0.0",
]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mybot = "mybot.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mybot"]

[tool.hatch.build.targets.wheel.sources]
"mybot" = "mybot"

# Include non-Python files in skills and templates
[tool.hatch.build]
include = [
    "mybot/**/*.py",
    "mybot/templates/**/*.md",
    "mybot/skills/**/*.md",
    "mybot/skills/**/*.sh",
]

[tool.hatch.build.targets.sdist]
include = [
    "mybot/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
